Fix an issue where occasionally input group stretches to page height in Chrome
Remove deprecated code

--- a/less/forms.less
+++ b/less/forms.less
@@ -184,10 +184,6 @@ textarea.input {
 		display: block;
 	}
 
-	.input-group input.input {
-		display: table-cell;
-	}
-
 }
 
 // horizontal form group
@@ -408,7 +404,8 @@ textarea.input {
 	display: flex;
 	width: 100%;
 
-	input.input {
+	input.input,
+	textarea.input {
 		display: block;
 		flex: 0 1 auto;
 		margin: 0;
@@ -433,7 +430,7 @@ textarea.input {
 	}
 
 	.input-addon, .input-addon-btn {
-		display: block;
+		display: flex;
 		flex: 0 1 auto;
 		vertical-align: middle;
 		margin: 0;
@@ -461,12 +458,6 @@ textarea.input {
 			border-right-width: @input-border-width;
 		}
 
-	}
-
-	.input-addon-btn {
-		.btn {
-			height: 100%;
-		}
 	}
 	
 	// border-radius
